alignment corrections v4

--- a/style/reasons-to-choose-style.css
+++ b/style/reasons-to-choose-style.css
@@ -6,7 +6,7 @@
 }
 
 .container {
-  margin: 50px 25px 25px 0;
+  margin: 50px 35px 35px 0;
 }
 
 .container .card .icon {
